tests/snapshots/parser__parse_post_url-2.snap
---
source: tests/parser.rs
description: post /api/v2
expression: ast
---
Program(
  source: "post /api/v2",
  items: [
    Request(Request(
      method: POST,
      endpoint: Pathname(Literal(
        value: "/api/v2",
        span: Span(
          start: Position(
            value: 5,
            line: 0,
            col: 5,
          ),
          end: Position(
            value: 12,
            line: 0,
            col: 12,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 12,
          line: 0,
          col: 12,
        ),
      ),
    )),
  ],
)
