tests/snapshots/parser__parse_post_url.snap
---
source: tests/parser.rs
description: "post http://localhost"
expression: ast
---
Program(
  source: "post http://localhost",
  items: [
    Request(
      method: POST,
      endpoint: Url(Literal(
        value: "http://localhost",
        span: Span(
          start: Position(
            value: 5,
            line: 0,
            col: 5,
          ),
          end: Position(
            value: 21,
            line: 0,
            col: 21,
          ),
        ),
      )),
      block: None,
      span: Span(
        start: Position(
          value: 0,
          line: 0,
          col: 0,
        ),
        end: Position(
          value: 21,
          line: 0,
          col: 21,
        ),
      ),
    ),
  ],
)
